:bug: Fix editor scrollbar style

--- a/src/styles/Editor/index.scss
+++ b/src/styles/Editor/index.scss
@@ -6,11 +6,12 @@
     border-radius: 5px;
     margin: 10px;
     padding: 10px;
+    padding-bottom: 2px;
   }
   &__control_box{
     position: absolute;
-    bottom: 25px;
-    right: 25px;
+    bottom: 10px;
+    right: 20px;
     height: 40px;
     display: flex;
     gap: 10px;
