--- a/src/styles/Workspace/SearchBox/index.scss
+++ b/src/styles/Workspace/SearchBox/index.scss
@@ -10,6 +10,9 @@
   }
   &__input_box {
     position: relative;
+    display: flex;
+    align-items: center;
+    padding-bottom: 10px;
     &__input {
       width: 100%;
       height: 40px;
@@ -79,6 +82,9 @@
 
 .accordian_container {
   margin: 10px 0px;
+  &:first-child{
+    margin-top: 0px;
+  }
 }
 pre, code {
   white-space: pre;
